<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#FFD42A"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/menuIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/menu_icon"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:id="@+id/titleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/studynitp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:layout_centerInParent="true"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:id="@+id/profileIcon"
                        android:layout_width="55dp"
                        android:layout_height="53dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/profile_icon_img"
                        android:contentDescription="@string/profile" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gridRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:clipToPadding="false"
                android:scrollbars="vertical" />

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#D3D3D3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:background="#FFC107"
            android:fitsSystemWindows="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/studynitp1"
                android:textSize="20sp"
                android:textColor="#000"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/cd1" />
        </LinearLayout>

        <ListView
            android:id="@+id/nav_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="50dp"
            android:layout_weight="1"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp" />
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
